@@ -1,3 +1,11 @@
+Fri Apr  1 01:50:52 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/variable_substitution.s: Add check on empty
+	string variable expansion.
+	* input.c (inputVarSub): Add return value indicating additional
+	environment expansion or not.
+	(inputArgSub): Follow inputVarSub API change.
+
 Wed Mar 30 01:38:58 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/environment_variable.s: Improve test.
